tests/baselines/reference/heterogeneousArrayAndOverloads.errors.txt
tests/cases/compiler/heterogeneousArrayAndOverloads.ts(9,19): error TS2345: Argument of type '(string | number)[]' is not assignable to parameter of type 'string[]'.
  Type 'string | number' is not assignable to type 'string'.
    Type 'number' is not assignable to type 'string'.


==== tests/cases/compiler/heterogeneousArrayAndOverloads.ts (1 errors) ====
    class arrTest {
        test(arg1: number[]);
        test(arg1: string[]);
        test(arg1: any[]) { }
        callTest() {
            this.test([1, 2, 3, 5]);
            this.test(["hi"]);
            this.test([]);
            this.test([1, 2, "hi", 5]); // Error
                      ~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(string | number)[]' is not assignable to parameter of type 'string[]'.
!!! error TS2345:   Type 'string | number' is not assignable to type 'string'.
!!! error TS2345:     Type 'number' is not assignable to type 'string'.
        }
    }